# floor_examples

./: .gitignore  README.asciidoc  README.textile
common/camera/: camera.cpp  camera.hpp
common/obj_loader/: obj_loader.cpp  obj_loader.hpp
data/: config.json  config.xml  nbody_compute.comp  nbody_compute.spv  nbody_raster.comp  nbody_raster.spv  vr_action_manifest.json  vr_index_controller_bindings.json
data/collision_models/gear/: gear.mtl
data/collision_models/golem/: README.txt  golem.mtl
data/collision_models/plane/: plane.mtl
data/collision_models/sinbad/: README.txt  sinbad.mtl
data/dtd/: config.dtd
data/nets/test/: LICENSE.txt
data/nets/vgg16/: README.txt  get_vgg16.sh
data/sponza/: README  ios_sponza.mtl  sponza.mtl
data/sponza/pvrtc_textures/: background.pvr  background_ddn.pvr  lion.pvr  lion_ddn.pvr  spnza_bricks_a_ddn.pvr  spnza_bricks_a_diff.pvr  spnza_bricks_a_spec.pvr  sponza_arch_ddn.pvr  sponza_arch_diff.pvr  sponza_arch_spec.pvr  sponza_ceiling_a_diff.pvr  sponza_ceiling_a_spec.pvr  sponza_column_a_ddn.pvr  sponza_column_a_diff.pvr  sponza_column_a_spec.pvr  sponza_column_b_ddn.pvr  sponza_column_b_diff.pvr  sponza_column_b_spec.pvr  sponza_column_c_ddn.pvr  sponza_column_c_diff.pvr  sponza_column_c_spec.pvr  sponza_curtain_blue_diff.pvr  sponza_curtain_diff.pvr  sponza_curtain_green_diff.pvr  sponza_curtain_spec.pvr  sponza_details_diff.pvr  sponza_details_spec.pvr  sponza_fabric_blue_diff.pvr  sponza_fabric_diff.pvr  sponza_fabric_green_diff.pvr  sponza_fabric_spec.pvr  sponza_flagpole_diff.pvr  sponza_flagpole_spec.pvr  sponza_floor_a_diff.pvr  sponza_floor_a_spec.pvr  sponza_roof_diff.pvr  sponza_thorn_ddn.pvr  sponza_thorn_diff.pvr  sponza_thorn_mask.pvr  sponza_thorn_spec.pvr  (+9 more)
dnn/: CMakeLists.txt  build.sh
dnn/dnn.xcodeproj/: project.pbxproj
dnn/src/: dnn.cpp  dnn.hpp  dnn_state.hpp  main.cpp  nn_executer.cpp  nn_executer.hpp  nn_importer.cpp  nn_importer.hpp
dnn/src/ios/: CamViewController.h  CamViewController.mm  Info.plist  camera_view.xib
dnn/src/ios/Base.lproj/: LaunchScreen.storyboard
dnn/src/osx/: Info.plist
etc/: build_embedded_fubar.sh  targets.json
hlbvh/: CMakeLists.txt  build.sh  hlbvh.sln  hlbvh.vcxproj  hlbvh.vcxproj.filters  make_embedded_fubar.sh
hlbvh/hlbvh.xcodeproj/: project.pbxproj
hlbvh/src/: animation.cpp  animation.hpp  collider.cpp  collider.hpp  gl_renderer.cpp  gl_renderer.hpp  hlbvh.cpp  hlbvh_shaders.cpp  hlbvh_state.hpp  main.cpp  metal_renderer.hpp  metal_renderer.mm  radix_sort.cpp  radix_sort.hpp  triangle_intersection.hpp  unified_renderer.cpp  unified_renderer.hpp
hlbvh/src/ios/Base.lproj/: LaunchScreen.xib
hlbvh/src/osx/: Info.plist
img/: CMakeLists.txt  build.sh  img.sln  img.vcxproj  img.vcxproj.filters
img/img.xcodeproj/: project.pbxproj
img/src/: gl_blur.cpp  gl_blur.hpp  gl_shader.cpp  gl_shader.hpp  img_kernels.cpp  img_kernels.hpp  main.cpp
img/src/osx/: Info.plist
nbody/: CMakeLists.txt  build.sh  make_embedded_fubar.sh  nbody.sln  nbody.vcxproj  nbody.vcxproj.filters  targets_nbody.json
nbody/nbody.xcodeproj/: project.pbxproj
nbody/src/: gl_renderer.cpp  gl_renderer.hpp  main.cpp  metal_renderer.hpp  metal_renderer.mm  metal_shaders.metal  nbody.cpp  nbody.hpp  nbody_state.hpp  unified_renderer.cpp  unified_renderer.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
nbody/src/ios/: Info.plist
nbody/src/osx/: Info.plist
offline_compiler/: CMakeLists.txt  build.sh  example_options.json  example_targets.json  occ.sln  occ.vcxproj
offline_compiler/occ.xcodeproj/: project.pbxproj
offline_compiler/src/: fubar.cpp  fubar.hpp  fubar_dis.cpp  fubar_dis.hpp  function_info.cpp  function_info.hpp  main.cpp  option_handler.cpp  option_handler.hpp
path_tracer/: CMakeLists.txt  build.sh  example_cuda.ll  example_spir_3_2.bc  example_spir_3_5.bc  example_spir_3_5.ll  path_tracer.sln  path_tracer.vcxproj
path_tracer/path_tracer.xcodeproj/: project.pbxproj
path_tracer/src/: cornell_box.hpp  main.cpp  path_tracer.cpp  path_tracer.hpp
path_tracer/src/ios/Base.lproj/: LaunchScreen.xib
poc_spir_ptx/: build.sh  example_cuda.ptx  example_spir_3_2.ll  poc.sln  poc.vcxproj
poc_spir_ptx/poc_spir_ptx.xcodeproj/: project.pbxproj
poc_spir_ptx/src/: cornell_box.hpp  main.cpp  poc_spir_ptx.cpp  poc_spir_ptx.hpp
reduction/: CMakeLists.txt  build.sh
reduction/reduction.xcodeproj/: project.pbxproj
reduction/src/: main.cpp  reduction.cpp  reduction.hpp  reduction_state.hpp
reduction/src/ios/Images.xcassets/LaunchImage.launchimage/: Contents.json
reduction/src/osx/: Info.plist
warp/: CMakeLists.txt  build.sh  warp.sln  warp.vcxproj  warp.vcxproj.filters
warp/src/: auto_cam.cpp  auto_cam.hpp  camera.cpp  camera.hpp  common_renderer.cpp  common_renderer.hpp  gl_renderer.cpp  gl_renderer.hpp  main.cpp  metal_renderer.hpp  metal_renderer.mm  metal_shaders.metal  obj_loader.cpp  obj_loader.hpp  unified_renderer.cpp  unified_renderer.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_renderer_legacy.cpp  vulkan_renderer_legacy.hpp  warp.cpp  warp.hpp  warp_shaders.cpp  warp_shaders.hpp  warp_state.hpp
warp/src/ios/: Info.plist
warp/src/ios/Base.lproj/: LaunchScreen.xib
warp/warp.xcodeproj/: project.pbxproj
